<resources>
    <string name="app_name">CORE</string>
    <string name="TeamCore">TeamCore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="adsID">ca-app-pub-4410935111031067~7345603486</string>
    <string name="adsCore">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adsCoreCloud">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adsMainGrid">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adsMapSearch">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adsUserSearch">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ProfileChat_ads">ProfileChat</string>
    <string name="FMainGrid_ads">FMainGrid</string>
    <string name="Friends_ads">Friends</string>
    <string name="Chating_ads">ChatList</string>
    <string name="adsProfileChating">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adsFMainGrid">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adsFriendsTab">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adsChatingList">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adsWriteCorePost">ca-app-pub-3940256099942544/5224354917</string>
    <string name="adsUserSearching">ca-app-pub-3940256099942544/5224354917</string>
    <string name="adsNavAlarm">ca-app-pub-3940256099942544/5224354917</string>
    <string name="adsMapSearching">ca-app-pub-3940256099942544/5224354917</string>
    <string name="adsEnteredCore">ca-app-pub-3940256099942544/5224354917</string>
    <string name="adsBlockUser">ca-app-pub-3940256099942544/5224354917</string>
    <string name="find_map">지도 검색</string>
    <string name="find_id">회원 검색</string>
    <string name="lock_to_all_user">공개한 사진 모두 잠금</string>
    <string name="notOpenToday">오늘 하루 열지 않기</string>
    <string name="join_mail_1">이메일은 비밀번호를 잃어버렸을 때 변경할 수 있는 페이지를 전송해주는 중요한 정보입니다.</string>
    <string name="join_mail_2">코어는 기기당 한 계정만 가입할 수 있으므로 가급적 수신이 가능한 메일을 입력해주시기 바랍니다.</string>
    <string-array name="titles_tab">
        
        <item>People</item>
        
    </string-array>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="unblock_to_all_user">전체 회원 블럭 해제</string>
    <string name="people">People</string>
    <string name="alarm">alarm</string>
    <string name="badge">badge</string>
    <string name="mainAlarm">mainAlarm</string>
    <string name="navAlarm">navAlarm</string>
    <string name="currentRoom">currentRoom</string>
    <string name="currentActivity">currentActivity</string>
    <string name="badgeChat">badgeChat</string>
    <string name="badgeFriends">badgeFriends</string>
    <string name="chatListBadge">chatListBadge</string>
    <string name="badgeFriend">badgeFriend</string>
    <string name="badgeFollow">badgeFollow</string>
    <string name="badgeFollowing">badgeFollowing</string>
    <string name="badgeView">badgeView</string>
    <string name="badgePost">badgePost</string>
    <string name="friends">친구</string>
    <string name="viewed_me">나를 본 회원</string>
    <string name="block">블럭</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="unfollow">팔로우 취소</string>
    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="core_plus">CORE PLUS</string>
    <string name="notice">공지사항</string>
    <string name="account_setting">계정</string>
    <string name="alarm_setting">알림</string>
    <string name="block_list">블럭</string>
    <string name="app_info">앱 정보</string>
    <string name="log_out">로그 아웃</string>
    <string name="core">코어</string>
    <string name="follow">팔로우</string>
    <string name="unblock">블럭 해제</string>
    <string name="oldOrder">오래된 순</string>
    <string name="newOrder">최신 순</string>
    <string name="unknown">Unknown</string>
    <string name="pic_upload_notice">
        &#160;프로필 사진에 직,간접적으로 성기의 외곽이 보이는 사진, 엉덩이 노출, 음모 노출, 성행위의 묘사나 연상이 가능한 이미지, 성인 용품 기구 이미지 등 외설적이거나 음란한 사진의 게재를 금지합니다.\n\n
        &#160;회원님의 프로필 사진이 신고당해 사유가 인정될 시 프로필 초기화 및 일정 기간 업로드 불가능하게되며 이러한 제재가 누적될 시 이용 정지 처리될 수 있습니다.

    </string>
    <string name="ReportAndBlock">신고 후 바로 차단하기</string>
    <string name="cancle">취소</string>
    <string name="report">신고</string>
    <string name="ok">확인</string>
    <string name="set_vibrate">푸쉬 진동 설정</string>
    <string name="set_new_message">새 메세지를 받았을 때</string>
    <string name="set_new_follower">새 팔로워가 추가됐을 때</string>
    <string name="set_new_friends">새 친구가 생겼을 때</string>
    <string name="set_new_post">내 코어에 새 익명글이 올라왔을 때</string>
    <string name="set_new_answer">내 질문에 답변이 달렸을 때</string>
    <string name="set_new_heart">내 코어 포스트에 하트가 추가됐을 때</string>
    <string name="set_opn_lockpic">누가 비공개 사진을 열었을 때</string>
    <string name="set_password">비밀번호 변경</string>
    <string name="cur_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="re_password">비밀번호 확인</string>
    <string name="find_password">비밀번호를 잊으셨나요?</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="del_account">계정 삭제</string>
    <string name="app_update">업데이트 정보</string>
    <string name="accessterms1">이용 약관</string>
    <string name="accessterms2">개인정보 취급방침</string>
    <string name="accessterms3">위치정보 제공동의</string>
    <string name="app_license">오픈소스 라이선스</string>
    <string name="app_bug_report">의견 보내기</string>
    <string name="anonymityProhibition">익명 질문 받지 않기</string>
    <string name="find_nickname_hint">닉네임을 검색하세요</string>
    <string name="find_map_hint">위치를 검색하세요</string>
    <string name="cp_1">다른 회원을 더 자세히 알아보고 싶으신가요?</string>
    <string name="cp_2">CORE PLUS는 여러분께 다양한 혜택을 드립니다!</string>
    <string name="cp_3">CORE PLUS 구독하기</string>
    <string name="cp_4">￦ ---- / 월 ※ 부가세 별도</string>
    <string name="cp_6">구독 혜택 안내</string>
    <string name="cp_7">안녕하세요.</string>
    <string name="cp_8">구독 혜택을 알려드릴 운영자 입니다.</string>
    <string name="cp_9">CORE PLUS를 구독하시면,</string>
    <string name="cp_10">1 다른 회원의 코어를 제한없이 볼 수 있습니다.</string>
    <string name="cp_11">관심있는 회원의 코어에 들어가</string>
    <string name="cp_12">일상사진, 생각, 목소리를 알아보고 익명 질문을 남겨보세요!</string>
    <string name="cp_13">2 내 코어에 기록할 수 있는 포스트 총 개수가 증가됩니다.</string>
    <string name="cp_14">기록할 수 있는 코어 포스트의 개수가</string>
    <string name="cp_15">150개에서 500개로 늘어납니다!</string>
    <string name="cp_16">3 움직이는 사진(GIF 파일)을 업로드 할 수 있습니다.</string>
    <string name="cp_17">프로필 사진과 코어 포스트에 좋아하는 짤을 넣어보세요!</string>
    <string name="cp_18">* 5MB 이하의 GIF 파일만 업로드 가능합니다</string>
    <string name="cp_19">4 매너 없는 포스트를 게시한 익명 회원을 차단할 수 있습니다.</string>
    <string name="cp_20">내 코어에 악성 포스트를 남긴 익명 유저를 차단할 수 있습니다!</string>
    <string name="cp_21">5 차단한 블럭 리스트를 볼 수 있고 해제할 수 있습니다.</string>
    <string name="cp_22">차단한 회원을 (익명 차단 포함) 모두 볼 수 있고,</string>
    <string name="cp_23">다시 해제할 수 있습니다.</string>
    <string name="cp_24">다른 궁금한 점이 있나요?</string>
    <string name="cp_25">의견 보내기</string>
    <string name="cp_26">를 통해 질문하시면 답변 드리겠습니다!</string>
    <string name="cp_27">6 앱 내 모든 광고가 제거됩니다.</string>
    <string name="cp_28">광고를 제거하여 쾌적하게 코어를 즐겨보세요.</string>
    <string name="scrollDown">아래로 내려가기</string>
    <string name="deleteImage">삭제된 이미지 입니다</string>
    <string name="GP_LICENSE_KEY">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjb/FDQu9+r3v/4z+N5y19B9KzIxivZY5DBQst1DA7FIbWuE/x4cUdqccJFhO6crKU8/i4P9RRfeLJecm5HKnbfSruWlozSuYHEJwRY7FoS7ad5vlHbqq8mRQwOuHYlDiFczQMz7eeHYuduGmhOXI+bxEKNI7SLSmf2wTN/oy/OhG2rhONDiYUiXXO+Uk64/gVWJUktDvKrzczse9wHBu4jCWwMYweTFdDYfaNq+h6vcYy/olY1Ufk9X9AkpxH4n9e0NW+YnFgchz1B7mhUgmd78LFWbHpLfpxEQXRRVeu+Ale0Ewr2gYZVg3nP1zHxlts6/ee9eVrjCSSv4pbpB27wIDAQAB</string>
    <string name="subscribe">test0001</string>
    <string name="purchase">test</string>
    <string name="alertChat">새로운 메세지를 확인해보세요!</string>
    <string name="alertFolow">누군가가 당신을 팔로우 했어요!</string>
    <string name="alertFriend">새로운 친구가 생겼어요!</string>
    <string name="alertPost">누군가 내 코어에 질문을 남겼어요!</string>
    <string name="alertLike">누군가 내가 올린 포스트를 좋아하네요!</string>
    <string name="alertUnlockPic">누군가 당신에게 비공개 사진을 열었어요!</string>
    <string name="alertAnswer">당신이 작성한 질문글에 답이 왔네요!</string>
    <string name="msgUnlockPic">비공개 사진을 확인해보세요!</string>
    <string name="mapSpiner">&#160;눌러서 이곳 회원 검색&#160;</string>
    <string name="heartCountUser">하트 누른 유저들</string>
    <string name="cannotOver5Mb">5MB가 넘는 파일은 업로드 할 수 없습니다</string>
    <string name="detach_cloud">클라우드에서 내리기</string>
    <string name="next">다음</string>
    <string name="approval">클라우드 결제</string>
    <string name="admob">admob</string>
    <string name="blockCount">blockCount</string>
    <string name="findUserCount">findUserCount</string>
    <string name="mCorePostCount">mCorePostCount</string>
    <string name="coreCloudProfileCount">coreCloudProfileCount</string>
    <string name="mapSearchCount">mapSearchCount</string>
    <string name="navAlarmCount">navAlarmCount</string>
    <string name="cloud_pager_1">클라우드는 자신의 코어 포스트 중 하나를 1$에 결제하여, 앱 내 전체 회원에게 공개하는 자기 어필 광고 공간입니다</string>
    <string name="cloud_pager_1_1">다음 업로드 가능 시간</string>
    <string name="cloud_pager_2">이 포스트를 결제하면 24시간동안 클라우드에 올라가고, 시간이 지나면 자동으로 삭제됩니다</string>
    <string name="cloud_pager_2_1"> 클라우드는 총 100개의 포스트만 보이며, 그 이후는 가장 오래된 포스트가 빠지면 업로드가 가능합니다</string>
    <string name="cloud_pager_3">게시에 위반되는 포스트를 절대 업로드하지 마십시오</string>
    <string name="cloud_pager_3_1">성기 노출 사진, 성매매 글 등 게시에 위반되는 포스트를 올릴 시 예고없이 클라우드에서 삭제될 수 있습니다</string>
    <string name="cloud_pager_4">안심하세요</string>
    <string name="cloud_pager_4_1">블럭한 회원은 클라우드에 올린 나의 포스트를 볼 수 없습니다.</string>
    <string name="cloud_pager_5">클라우드에 올린 포스트가 관리자에 의해 제재 당하거나,</string>
    <string name="cloud_pager_5_1">본인 실수로 삭제하실 경우 결제없이 재 업로드는 불가능합니다</string>
    <string name="cloud_pager_5_2">고지사항을 모두 숙지하고 결제를 동의합니다.</string>
    <string name="possibleUploadCloud">현재 클라우드 업로드 가능합니다</string>
    <string name="access1">게이 소셜 네트워크 서비스 어플 코어는 사용에 있어 다음 세가지 필수 권한을 요구합니다.</string>
    <string name="access2">코어의 원활한 사용을 위해 위 세 가지 필수 접근 권한 허용을 동의해 주시기 바라며, 권한 접근 허용은 앱 설치 후 한번만 동의하시면 됩니다.</string>
    <string name="core_notice_txt1">- 직,간접적으로 성기의 외곽이 보이는 사진, 엉덩이 노출, 음모 노출, 성행위의 묘사나 연상이 가능한 이미지, 성인 용품 기구 이미지 등 외설적이거나 음란한 사진의 게재를 금지합니다.</string>
    <string name="core_notice_txt2">- 자신이 대화에 참여하지 않은 타인의 대화를 녹음하여 포스트에 게재 시 통신비밀보호법 14조 등 관련법에 의거 처벌받을 수 있으며, 코어는 서비스 내 회원 간 법적 문제에 관해 일절 책임지지 않습니다.</string>
    <string name="core_notice_txt3">- 코어는 자기 자신의 표현 공간으로 도용 하여 타인의 초상권, 저작권을 침해한 포스트의 게재를 금지합니다.</string>
    <string name="core_notice_txt4">위 제재 항목 및 이용 약관을 위반한 포스트가 신고당할 경우, 관리자에 의해 해당 포스트는 삭제되고, 7일 간 포스트 업로드가 불가능합니다. 회원은 반드시 위 제재 항목을 준수하여 주시기 바랍니다.
</string>
</resources>