<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The toolbar -->
    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/core_plus"
            android:textColor="@color/black"
            android:textSize="15.5dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_layout"
        android:background="@color/white"
        >

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/cp_1"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/cp_2"
                android:textColor="@color/black"

                />

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp">


                <ImageView
                    android:id="@+id/cor2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_cp_subs"
                android:layout_width="210dp"
                android:layout_height="43dp"
                android:layout_below="@+id/layout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@drawable/btn_cp_subs"
                android:text="@string/cp_3"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_cp_subs"
                android:layout_marginTop="35dp">

                <TextView
                    android:id="@+id/price1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cp_4"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <View
                    android:id="@+id/section_line1"
                    android:layout_below="@+id/price1"
                    android:layout_width="180dp"
                    android:layout_height="0.5dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@color/black"></View>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/price_layout"
                android:layout_marginTop="70dp"
                android:background="@drawable/cp_function_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_6"
                    android:layout_centerInParent="true"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:layout_marginTop="90dp"
                android:text="@string/cp_7"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt3"
                android:layout_marginTop="5dp"
                android:text="@string/cp_8"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                />
            
            <ImageView
                android:id="@+id/img_cp_1"
                android:layout_width="115dp"
                android:layout_height="140dp"
                android:background="@drawable/cp_1"
                android:layout_below="@+id/txt4"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_cp_1"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/cp_9"
                android:textSize="13dp"
                android:textColor="@color/black"
                />

            <RelativeLayout
                android:id="@+id/cp_function_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt5"
                android:layout_marginTop="95dp"
                android:background="@drawable/cp_function_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_10"
                    android:layout_centerInParent="true"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <ImageView
                android:id="@+id/img_cp_2"
                android:layout_width="265dp"
                android:layout_height="230dp"
                android:background="@drawable/cp_2"
                android:layout_below="@+id/cp_function_1"
                android:layout_marginTop="98dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_11"
                android:textColor="@color/black"
                android:layout_below="@+id/img_cp_2"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_12"
                android:textColor="@color/black"
                android:layout_below="@+id/txt6"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <RelativeLayout
                android:id="@+id/cp_function_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt7"
                android:layout_marginTop="95dp"
                android:background="@drawable/cp_function_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_13"
                    android:layout_centerInParent="true"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <ImageView
                android:id="@+id/img_cp_3"
                android:layout_width="320dp"
                android:layout_height="140dp"
                android:background="@drawable/cp_3"
                android:layout_below="@+id/cp_function_2"
                android:layout_marginTop="108dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_14"
                android:textColor="@color/black"
                android:layout_below="@+id/img_cp_3"
                android:layout_marginTop="45dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_15"
                android:textColor="@color/black"
                android:layout_below="@+id/txt8"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <RelativeLayout
                android:id="@+id/cp_function_3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt9"
                android:layout_marginTop="95dp"
                android:background="@drawable/cp_function_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_16"
                    android:layout_centerInParent="true"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <ImageView
                android:id="@+id/img_cp_4"
                android:layout_width="115dp"
                android:layout_height="140dp"
                android:layout_below="@+id/cp_function_3"
                android:layout_marginTop="98dp"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/txt10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_17"
                android:textColor="@color/black"
                android:layout_below="@+id/img_cp_4"
                android:layout_marginTop="45dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_18"
                android:textColor="@color/black"
                android:layout_below="@+id/txt10"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <RelativeLayout
                android:id="@+id/cp_function_4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt10"
                android:layout_marginTop="95dp"
                android:background="@drawable/cp_function_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_19"
                    android:layout_centerInParent="true"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>


            <ImageView
                android:id="@+id/img_cp_5"
                android:layout_width="335dp"
                android:layout_height="280dp"
                android:background="@drawable/cp_5"
                android:layout_below="@+id/cp_function_4"
                android:layout_marginTop="98dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_20"
                android:textColor="@color/black"
                android:layout_below="@+id/img_cp_5"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                />

            <RelativeLayout
                android:id="@+id/cp_function_5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt12"
                android:layout_marginTop="95dp"
                android:background="@drawable/cp_function_background"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_21"
                    android:layout_centerInParent="true"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <ImageView
                android:id="@+id/img_cp_6"
                android:layout_width="115dp"
                android:layout_height="185dp"
                android:background="@drawable/cp_6"
                android:layout_below="@+id/cp_function_5"
                android:layout_marginTop="85dp"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/txt13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_22"
                android:textColor="@color/black"
                android:layout_below="@+id/img_cp_6"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txt14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_23"
                android:textColor="@color/black"
                android:layout_below="@+id/txt13"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                />

            <View
                android:id="@+id/section_line2"
                android:layout_below="@+id/txt14"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@color/black"></View>

            <Button
                android:id="@+id/btn_cp_subs2"
                android:layout_width="210dp"
                android:layout_height="43dp"
                android:layout_below="@+id/section_line2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"
                android:background="@drawable/btn_cp_subs"
                android:text="@string/cp_3"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_24"
                android:textColor="@color/black"
                android:layout_below="@+id/btn_cp_subs2"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt15"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="100dp"
                >

            <TextView
                android:id="@+id/txt16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_25"
                android:textColor="@color/skyblue"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                />

            <TextView
                android:id="@+id/txt17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_26"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
