<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


    <ImageView
        android:id="@+id/img_cld_notice"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:lineSpacingExtra="6dip"
        android:text="@string/cloud_pager_5"
        android:textColor="@color/black"

        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:lineSpacingExtra="6dip"
        android:text="@string/cloud_pager_5_1"
        android:textColor="@color/black"

        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/checkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt2"
        android:layout_marginTop="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/check_notice"
            android:text="@string/cloud_pager_5_2"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/check_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:buttonTint="@color/skyblue" />


    </RelativeLayout>

    <TextView
        android:id="@+id/approval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/approval"
        android:textColor="@color/skyblue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--<Button-->
    <!--android:id="@+id/approval"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/approval"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--/>-->


    <!--<Button-->
    <!--android:id="@+id/next"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/next" />-->
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

